# Music-recommendation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  command.py  docker-compose.yml  mlflow.db  pyproject.toml  test2.ipynb
.dvc/: config
config/: config.yaml
music/: 10000.txt.dvc  data_loader.py  infer.py  model.py  recommend.py  song_data.csv.dvc  torch_model.py  torch_train.py  train.py
music/model/: matrix_model.py
music/preprocess/: data_loader.py  loader.py
