[tool.poetry]
name = "music-recommendation"
version = "0.1.0"
description = "Music-recommendation system for MLoPS project"
authors = ["Dmitriy Kulish <kulish.da@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.6.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
